--- a/app/src/main/res/layout/fragment_body_building_one.xml
+++ b/app/src/main/res/layout/fragment_body_building_one.xml
@@ -133,7 +133,7 @@
         android:id="@+id/completeDay1bb"
         android:layout_below = "@+id/hamstringDetail"
         android:layout_gravity="right|bottom"
-        android:background="#ff6655"
+        android:background="#46d4e8"
         />
 
 
