--- a/app/src/main/res/layout/fragment_weightloss_day_one.xml
+++ b/app/src/main/res/layout/fragment_weightloss_day_one.xml
@@ -119,7 +119,7 @@
             android:id="@+id/completeDay1w"
             android:layout_below = "@+id/jumpropeDetail"
             android:layout_gravity="right|bottom"
-            android:background="#ff6655"
+            android:background="#46d4e8"
             />
 
 
