made progress colors on workout pages and changes the whole color scheme on all pages

--- a/app/src/main/res/layout/fragment_body_building_day_three.xml
+++ b/app/src/main/res/layout/fragment_body_building_day_three.xml
@@ -133,7 +133,7 @@
         android:id="@+id/completeDay3bb"
         android:layout_below = "@+id/closegripPushupDetail"
         android:layout_gravity="right|bottom"
-        android:background="#46d4e8"/>
+        android:background="#e89633"/>
 
     </LinearLayout>>
 
