--- a/app/src/main/res/layout/fragment_points_page.xml
+++ b/app/src/main/res/layout/fragment_points_page.xml
@@ -13,7 +13,7 @@
         android:textSize="20dp"
         android:background="#010101"
         android:autoText="true"
-        android:textColor="#46d4e8"
+        android:textColor="#e89633"
         android:layout_below="@+id/with"
         android:layout_alignStart="@+id/listView4" />
 
@@ -30,7 +30,7 @@
             android:layout_below="@+id/LeaderTitle"
             android:layout_above="@+id/arnoldQuote"
             android:touchscreenBlocksFocus="false"
-            android:background="#46d4e8" />
+            android:background="#e89633" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -38,7 +38,7 @@
             android:id="@+id/arnoldQuote"
             android:layout_gravity="center"
             android:textStyle="normal|bold|italic"
-            android:textColor="#46d4e8"
+            android:textColor="#e89633"
             android:layout_above="@+id/arnoldText"
             android:layout_centerHorizontal="true"
             />
@@ -48,7 +48,7 @@
             android:layout_height="20dp"
             android:text="-Arnold Schwarzenegger"
             android:id="@+id/arnoldText"
-            android:textColor="#46d4e8"
+            android:textColor="#e89633"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true" />
 
