--- a/app/src/main/res/layout/fragment_strength_day_one.xml
+++ b/app/src/main/res/layout/fragment_strength_day_one.xml
@@ -128,7 +128,7 @@
                 android:layout_gravity="right|bottom"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentStart="false"
-                android:background="#46d4e8"
+                android:background="#e89633"
                 />
 
 
