--- a/app/src/main/res/layout/fragment_fitness_program.xml
+++ b/app/src/main/res/layout/fragment_fitness_program.xml
@@ -45,7 +45,7 @@
             android:layout_below="@+id/basedOnGoalsText"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="70dp"
-            android:background="#46d4e8" />
+            android:background="#e89633" />
 
 
         <TextView
@@ -71,7 +71,7 @@
             android:layout_centerHorizontal="true"
 
 
-            android:background="#46d4e8" />
+            android:background="#e89633" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -96,7 +96,7 @@
             android:clickable="true"
             android:layout_below="@+id/bodyBuildingText"
             android:layout_centerHorizontal="true"
-            android:background="#46d4e8" />
+            android:background="#e89633" />
 
         <TextView
             android:layout_width="wrap_content"
