--- a/app/src/main/res/layout/fragment_fp__wgt__loss.xml
+++ b/app/src/main/res/layout/fragment_fp__wgt__loss.xml
@@ -15,7 +15,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="25dp"
         android:layout_gravity="center"
-        android:background="#46d4e8" />
+        android:background="#e89633" />
 
     <Button
         android:layout_width="300dp"
@@ -25,7 +25,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="125dp"
         android:layout_gravity="center"
-        android:background="#46d4e8" />
+        android:background="#e8d839" />
 
     <Button
         android:layout_width="300dp"
@@ -36,7 +36,7 @@
         android:layout_marginBottom="75dp"
         android:layout_gravity="center"
         android:height="@dimen/activity_vertical_margin"
-        android:background="#46d4e8" />
+        android:background="#e8b63a" />
 
     <Button
         android:layout_width="300dp"
@@ -46,7 +46,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="-75dp"
         android:layout_gravity="center"
-        android:background="#46d4e8" />
+        android:background="#e8260e" />
 
     <Button
         android:layout_width="300dp"
@@ -56,7 +56,7 @@
 
         android:layout_marginBottom="-25dp"
         android:layout_gravity="center"
-        android:background="#46d4e8" />
+        android:background="#e86f14" />
 
     <Button
         android:layout_width="wrap_content"
@@ -64,7 +64,7 @@
         android:text="How To"
         android:id="@+id/howTo"
         android:layout_gravity="center_horizontal|bottom"
-        android:background="#46d4e8" />
+        android:background="#e89633" />
 
 
 </FrameLayout>
