--- a/app/src/main/res/layout/fragment_profile__page.xml
+++ b/app/src/main/res/layout/fragment_profile__page.xml
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:text="Take Pic"
             android:id="@+id/pic"
-            android:background="#ff6655"
+            android:background="#e89633"
             android:layout_alignBaseline="@+id/textView1"
             android:layout_alignBottom="@+id/textView1"
             android:layout_toEndOf="@+id/overBmi" />
@@ -46,7 +46,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/editprofilebutton"
             android:text="editProfile"
-            android:background="#ff6655"
+            android:background="#e89633"
             android:layout_alignTop="@+id/pic"
             android:layout_toEndOf="@+id/textView1" />
 
@@ -141,7 +141,7 @@
             android:layout_height="wrap_content"
             android:text="Change Attributes"
             android:id="@+id/weightButton"
-            android:background="#ff6655"
+            android:background="#e89633"
             android:layout_gravity="center_horizontal"
             android:layout_below="@+id/CurrH"
 
