--- a/app/src/main/res/layout/fragment_strength_day_three.xml
+++ b/app/src/main/res/layout/fragment_strength_day_three.xml
@@ -121,7 +121,7 @@
             android:id="@+id/completeDay3s"
             android:layout_below = "@+id/shrugDescription"
             android:layout_gravity="right|bottom"
-            android:background="#46d4e8"
+            android:background="#e89633"
             />
 
 
