--- a/app/src/main/res/layout/fragment_goal.xml
+++ b/app/src/main/res/layout/fragment_goal.xml
@@ -51,7 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/currentWeightGoal"
-        android:textColor="#46d4e8"
+        android:textColor="#e89633"
         android:textSize="20dp"
         android:textIsSelectable="true"
         android:layout_toEndOf="@+id/editnametext"
@@ -85,7 +85,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/currentWeightGainGoal"
-        android:textColor="#46d4e8"
+        android:textColor="#e89633"
         android:textSize="20dp"
         android:textIsSelectable="true"
         android:layout_toEndOf="@+id/weightGain"
@@ -118,7 +118,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/currentBenchGoal"
-        android:textColor="#46d4e8"
+        android:textColor="#e89633"
         android:textSize="20dp"
         android:textIsSelectable="true"
         android:layout_toEndOf="@+id/BenchText"
@@ -151,7 +151,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/currentSquatGoal"
-        android:textColor="#46d4e8"
+        android:textColor="#e89633"
         android:textSize="20dp"
         android:textIsSelectable="true"
         android:layout_toEndOf="@+id/SquatText"
@@ -189,7 +189,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/currentDeadLiftGoal"
-        android:textColor="#46d4e8"
+        android:textColor="#e89633"
         android:textSize="20dp"
         android:textIsSelectable="true"
         android:layout_toEndOf="@+id/DeadLiftText"
@@ -224,7 +224,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/currentMileTimeGoal"
-        android:textColor="#46d4e8"
+        android:textColor="#e89633"
         android:textSize="20dp"
         android:textIsSelectable="true"
         android:layout_toEndOf="@+id/MileTimeText"
