--- a/app/src/main/res/layout/fragment_goal.xml
+++ b/app/src/main/res/layout/fragment_goal.xml
@@ -10,18 +10,16 @@
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="#212121"><![CDATA[
+        android:background="#212121">
 
-        >
-
-]]></ScrollView>
+    </ScrollView>
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_height="fill_parent"
         android:layout_width="fill_parent"
         android:orientation="vertical"
         android:background="#212121"
-        android:layout_gravity="right|bottom"
+        android:layout_gravity="left|top"
         >
 
 
@@ -35,6 +33,7 @@
         android:layout_alignTop="@+id/currentWeightGoal"
         android:layout_centerHorizontal="true"
         android:paddingTop="30dp"
+        android:layout_marginBottom="10dp"
         />
 
         <Button
@@ -45,6 +44,7 @@
             android:background="#e89633"
             android:layout_below="@+id/editnametext"
             android:layout_alignStart="@+id/setWeightG"
+            android:layout_marginBottom="10dp"
             />
 
     <TextView
@@ -67,8 +67,7 @@
         android:textSize="20dp"
         android:layout_below="@+id/setWeight"
         android:layout_alignStart="@+id/editnametext"
-
-
+        android:layout_marginBottom="10dp"
         />
 
         <Button
@@ -79,6 +78,7 @@
             android:background="#e89633"
             android:layout_below="@+id/currentWeightGainGoal"
             android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dp"
             />
 
     <TextView
@@ -103,6 +103,7 @@
         android:textSize="20dp"
         android:layout_alignTop="@+id/currentBenchGoal"
         android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10dp"
         />
 
         <Button
@@ -112,7 +113,9 @@
             android:id="@+id/setBench"
             android:background="#e89633"
             android:layout_below="@+id/BenchText"
-            android:layout_alignStart="@+id/setWeightG" />
+            android:layout_alignStart="@+id/setWeightG"
+            android:layout_marginBottom="10dp"
+            />
 
     <TextView
         android:layout_width="wrap_content"
@@ -136,6 +139,7 @@
         android:textSize="20dp"
         android:layout_below="@+id/setBench"
         android:layout_alignStart="@+id/BenchText"
+        android:layout_marginBottom="10dp"
         />
 
         <Button
@@ -145,7 +149,9 @@
             android:id="@+id/setSquat"
             android:background="#e89633"
             android:layout_below="@+id/currentSquatGoal"
-            android:layout_alignStart="@+id/setBench" />
+            android:layout_alignStart="@+id/setBench"
+            android:layout_marginBottom="10dp"
+            />
 
     <TextView
         android:layout_width="wrap_content"
@@ -170,7 +176,7 @@
         android:layout_below="@+id/DeadLiftGoal"
         android:layout_alignTop="@+id/DeadLiftGoal"
         android:layout_alignStart="@+id/SquatText"
-
+        android:layout_marginBottom="10dp"
         />
 
         <Button
@@ -181,8 +187,8 @@
             android:background="#e89633"
             android:layout_centerVertical="true"
             android:layout_below="@+id/DeadLiftText"
-
             android:layout_alignStart="@+id/setSquat"
+            android:layout_marginBottom="10dp"
             />
 
     <TextView
@@ -207,6 +213,7 @@
         android:textSize="20dp"
         android:layout_below="@+id/setDeadLift"
         android:layout_alignEnd="@+id/weightGain"
+        android:layout_marginBottom="10dp"
         />
 
         <Button
@@ -217,7 +224,7 @@
             android:background="#e89633"
             android:layout_below="@+id/MileTimeText"
             android:layout_alignStart="@+id/setDeadLift"
-
+            android:layout_marginBottom="10dp"
             />
 
     <TextView
