--- a/app/src/main/res/layout/fragment_max.xml
+++ b/app/src/main/res/layout/fragment_max.xml
@@ -10,18 +10,16 @@
         <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:background="#212121"><![CDATA[
+            android:background="#212121">
 
-        >
-
-        ]]></ScrollView>
+        </ScrollView>
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_height="fill_parent"
         android:layout_width="fill_parent"
         android:orientation="vertical"
         android:background="#212121"
-        android:layout_gravity="right|bottom">
+        android:layout_gravity="right|top">
 
 
 <TextView
@@ -34,7 +32,9 @@
     android:textSize="20dp"
     android:gravity="right|center_vertical"
     android:layout_alignTop="@+id/userBench"
-    android:layout_centerHorizontal="true" />
+    android:layout_centerHorizontal="true"
+
+    />
 
         <Button
             android:layout_width="100dp"
@@ -43,8 +43,7 @@
             android:id="@+id/setBench"
             android:background="#e89633"
             android:layout_below="@+id/benchText"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="51dp" />
+            android:layout_centerHorizontal="true" />
 
 
         <TextView
@@ -78,8 +77,7 @@
             android:id="@+id/setSquat"
             android:background="#e89633"
             android:layout_below="@+id/squatText"
-            android:layout_alignStart="@+id/setBench"
-            android:layout_marginTop="51dp" />
+            android:layout_alignStart="@+id/setBench" />
 
         <TextView
         android:layout_width="wrap_content"
@@ -109,8 +107,7 @@
             android:id="@+id/setDeadLift"
             android:background="#e89633"
             android:layout_below="@+id/deadliftText"
-            android:layout_alignStart="@+id/setSquat"
-            android:layout_marginTop="51dp" />
+            android:layout_alignStart="@+id/setSquat" />
 
         <TextView
         android:layout_width="wrap_content"
@@ -142,8 +139,7 @@
             android:id="@+id/setMileTime"
             android:background="#e89633"
             android:layout_below="@+id/mileText"
-            android:layout_alignStart="@+id/setDeadLift"
-            android:layout_marginTop="51dp" />
+            android:layout_alignStart="@+id/setDeadLift" />
 
         <TextView
         android:layout_width="wrap_content"
@@ -159,5 +155,4 @@
 
 
     </RelativeLayout>
-
 </FrameLayout>
