--- a/app/src/main/res/layout/fragment_max.xml
+++ b/app/src/main/res/layout/fragment_max.xml
@@ -10,18 +10,16 @@
         <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:background="#212121"><![CDATA[
+            android:background="#212121">
 
-        >
-
-        ]]></ScrollView>
+        </ScrollView>
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_height="fill_parent"
         android:layout_width="fill_parent"
         android:orientation="vertical"
         android:background="#212121"
-        android:layout_gravity="right|bottom">
+        android:layout_gravity="right|top">
 
 
 <TextView
@@ -34,7 +32,9 @@
     android:textSize="20dp"
     android:gravity="right|center_vertical"
     android:layout_alignTop="@+id/userBench"
-    android:layout_centerHorizontal="true" />
+    android:layout_centerHorizontal="true"
+
+    />
 
         <Button
             android:layout_width="100dp"
@@ -44,7 +44,9 @@
             android:background="#e89633"
             android:layout_below="@+id/benchText"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="51dp" />
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            />
 
 
         <TextView
@@ -55,7 +57,9 @@
             android:textColor="#46d4e8"
             android:textSize="20dp"
             android:layout_toEndOf="@+id/benchText"
-            android:layout_marginTop="20dp"/>
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="10dp"
+            />
 
         <TextView
     android:layout_width="wrap_content"
@@ -68,8 +72,10 @@
     android:textColor="#ffffff"
     android:textSize="20dp"
     android:gravity="right|center_vertical"
-            android:layout_below="@+id/userSquat"
-            android:layout_centerHorizontal="true" />
+            android:layout_alignTop="@+id/userSquat"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dp"
+            />
 
         <Button
             android:layout_width="100dp"
@@ -79,7 +85,8 @@
             android:background="#e89633"
             android:layout_below="@+id/squatText"
             android:layout_alignStart="@+id/setBench"
-            android:layout_marginTop="51dp" />
+
+            />
 
         <TextView
         android:layout_width="wrap_content"
@@ -109,8 +116,7 @@
             android:id="@+id/setDeadLift"
             android:background="#e89633"
             android:layout_below="@+id/deadliftText"
-            android:layout_alignStart="@+id/setSquat"
-            android:layout_marginTop="51dp" />
+            android:layout_alignStart="@+id/setSquat" />
 
         <TextView
         android:layout_width="wrap_content"
@@ -142,8 +148,7 @@
             android:id="@+id/setMileTime"
             android:background="#e89633"
             android:layout_below="@+id/mileText"
-            android:layout_alignStart="@+id/setDeadLift"
-            android:layout_marginTop="51dp" />
+            android:layout_alignStart="@+id/setDeadLift" />
 
         <TextView
         android:layout_width="wrap_content"
@@ -159,5 +164,4 @@
 
 
     </RelativeLayout>
-
 </FrameLayout>
